chart/test/k8smanifest/templates/deployment.yaml
---
# Source: k8smanifest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  namespace: default
  labels:
    tags.datadoghq.com/env: development
    tags.datadoghq.com/service: my-service
    tags.datadoghq.com/version: 8675309JG
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-service
  template:
    metadata:
      labels:
        app: my-service
        tags.datadoghq.com/env: development
        tags.datadoghq.com/service: my-service
        tags.datadoghq.com/version: 8675309JG
    spec:
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
        - name: kafka-kafka-user
          secret:
            secretName: kafka-user
      automountServiceAccountToken: false
      containers:
      - name: hazelcast
        image: hazelcast/hazelcast:5.1.3
        imagePullPolicy: IfNotPresent
        env:
        - name: JAVA_OPTS
          value: >-
            -Dhazelcast.shutdownhook.policy=GRACEFUL
            -Dhazelcast.graceful.shutdown.max.wait=600
        - name: HZ_NETWORK_JOIN_MULTICAST_ENABLED
          value: "false"
        - name: HZ_NETWORK_JOIN_KUBERNETES_NAMESPACE
          value: default
        - name: HZ_NETWORK_JOIN_KUBERNETES_SERVICENAME
          value: my-service
        - name: HZ_NETWORK_JOIN_KUBERNETES_ENABLED
          value: "true"
        - name: HZ_NETWORK_PORT_PORT
          value: "5701"
        - name: HZ_NETWORK_PORT_PORTCOUNT
          value: "20"
        - name: HZ_NETWORK_PORT_AUTOINCREMENT
          value: "true"
        - name: HZ_INTEGRITYCHECKER_ENABLED
          value: "true"
        ports:
        - name: hazelcast
          containerPort: 5701
      - name: app
        image: acrbreezesoahub.azurecr.io/my-service:abc123
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: apmsocketpath
            mountPath: /var/run/datadog
          - name: kafka-kafka-user
            readOnly: true
            mountPath: /usr/secrets/kafka/certs
        env:
          - name: ASPNETCORE_ENVIRONMENT
            valueFrom:
              configmapKeyRef:
                name: my-service
                key: ASPNETCORE_ENVIRONMENT
          - name: KAFKA_BOOTSTRAP
            valueFrom:
              configmapKeyRef:
                name: my-service
                key: KAFKA_BOOTSTRAP
          - name: KAFKA_CA_CERT_PATH
            valueFrom:
              configmapKeyRef:
                name: my-service
                key: KAFKA_CA_CERT_PATH
          - name: KAFKA_USER_CERT_PATH
            valueFrom:
              configmapKeyRef:
                name: my-service
                key: KAFKA_USER_CERT_PATH
          - name: KAFKA_USER_KEY_CERT_PATH
            valueFrom:
              configmapKeyRef:
                name: my-service
                key: KAFKA_USER_KEY_CERT_PATH
          - name: KEYCLOAK_PASSWORD
            valueFrom:
              secretKeyRef:
                name: my-service
                key: KEYCLOAK_PASSWORD
          - name: KEYCLOAK_USER
            valueFrom:
              secretKeyRef:
                name: my-service
                key: KEYCLOAK_USER
          - name: POSTGRES_DB
            valueFrom:
              secretKeyRef:
                name: my-service
                key: POSTGRES_DB
          - name: KC_DB_URL
            valueFrom:
              secretKeyRef:
                name: my-service
                key: KC_DB_URL
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: my-service
                key: POSTGRES_PASSWORD
          - name: POSTGRES_USER
            valueFrom:
              secretKeyRef:
                name: my-service
                key: POSTGRES_USER
          - name: DD_ENV
            valueFrom:
              fieldRef:
                fieldPath: metadata.labels['tags.datadoghq.com/env']
          - name: DD_SERVICE
            valueFrom:
              fieldRef:
                fieldPath: metadata.labels['tags.datadoghq.com/service']
          - name: DD_VERSION
            valueFrom:
              fieldRef:
                fieldPath: metadata.labels['tags.datadoghq.com/version']
          - name: DD_LOGS_INJECTION
            value: "true"
          - name: DD_RUNTIME_METRICS_ENABLED
            value: "true"
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 35
          tcpSocket:
            port: 8080
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 35
          tcpSocket:
            port: 8080
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 10010
          runAsGroup: 2001
          capabilities:
            drop:
            - NET_RAW
            - ALL
        resources:
          limits:
            cpu: 25m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 128Mi
