chart/test/k8smanifest/templates/ingress.yaml
---
# Source: k8smanifest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/preserve-host: "true"
    kubernetes.io/ingress.class: kong
    configuration.konghq.com: "kong-configuration"
    plugins.konghq.com: jwt
  name: my-service-ing 
  namespace: default 
spec:
  rules:
  - host: <path:argo/data/development/shared/#API_HOSTNAME>
    http:
      paths:
      - pathType: Prefix
        path: /domain/service/secured/*
        backend:
          service:
            name: my-service
            port:
              number: 8080
---
# Source: k8smanifest/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/preserve-host: "true"
    kubernetes.io/ingress.class: kong
    configuration.konghq.com: "kong-configuration"
  name: my-service-public-ing
  namespace: default 
spec:
  rules:
  - host: <path:argo/data/development/shared/#API_HOSTNAME>
    http:
      paths:
      - pathType: Prefix
        path: /domain/service/
        backend:
          service:
            name: my-service
            port:
              number: 8080
