chart/test/k8smanifest/templates/kong-ingress.yaml
---
# Source: k8smanifest/templates/kong-ingress.yaml
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name: my-service-ing
  namespace: default
proxy:
  protocol: https
  connect_timeout: 10000
  retries: 10
  read_timeout: 10000
  write_timeout: 10000
route:
  methods:
  - GET
  - PUT
  regex_priority: 0
  strip_path: false
  preserve_host: true
  protocols:
  - http
  - https
---
# Source: k8smanifest/templates/kong-ingress.yaml
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name: my-service-public-ing
  namespace: default
proxy:
  protocol: https
  connect_timeout: 10000
  retries: 10
  read_timeout: 10000
  write_timeout: 10000
route:
  methods:
  - GET
  - PUT
  regex_priority: 0
  strip_path: false
  preserve_host: true
  protocols:
  - http
  - https
